# wener

./: Cargo.toml  docker-compose.dev.yaml
backend/: Cargo.toml  Dockerfile
backend/migrations/2024-10-02-142253_create_users/: down.sql  up.sql
backend/src/: main.rs  modules.rs  schema.rs  swagger.rs  util.rs
backend/src/modules/: hash.rs  jwt.rs  user.rs
backend/src/modules/user/: auth.rs
client/: Cargo.toml
frontend/: Cargo.toml  Dockerfile  Trunk.toml
nginx/development/: nginx.dev.conf
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
