[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.6", features = ["multipart", "ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
diesel = "2.2.4"
diesel-async = { version = "0.5.0", features = ["postgres", "bb8"] }
serde = { version = "1.0.210", features = ["derive"] }
argon2 = "0.5.3"
base64 = "0.22.1"
bb8 = "0.8.5"
redis = "0.27.2"
bb8-redis = "0.17.0"
proto = { path = "../proto" }
serde_json = "1.0.128"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
